--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Collect Proverb</string>
-    <string name="test_text">TestText</string>
+    <string name="header">今日の格言</string>
 </resources>
