--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Collect Proverb</string>
     <string name="header">今日の格言</string>
+    <string name="noproverbyet">まだ格言を取得していません</string>
+    <string name="cloud_description">背景の雲</string>
 </resources>
