格言一覧の背景を描画

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="no_proverb_yet">まだ格言を取得していません</string>
     <string name="cloud_description">背景の雲</string>
     <string name="get_proverb_button">今日の格言を受け取る</string>
+    <string name="proverb_list">格言一覧</string>
+    <string name="list_description">格言一覧の背景</string>
 </resources>
