--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="get_proverb_button">今日の格言を受け取る</string>
     <string name="proverb_list">格言一覧</string>
     <string name="list_description">格言一覧の背景</string>
+    <string name="unopened_badge_description">未開放のバッジ</string>
 </resources>
