--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="proverb_list">格言一覧</string>
     <string name="list_description">格言一覧の背景</string>
     <string name="unopened_badge_description">未開放のバッジ</string>
-    <string name="popup_close_description">閉じる</string>
+    <string name="popup_close_button">×</string>
     <string name="popup_close_text">閉じる</string>
     <string name="popup_next_text">次へ</string>
     <string name="popup_test_text">テストテキスト</string>
