--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="popup_proverb_author">発言者: </string>
     <string name="popup_proverb">格言</string>
     <string name="popup_proverb_get_day">取得日: </string>
+    <string name="popup_proverb_count">取得回数: </string>
 </resources>
